<resources>
    <string name="app_name">Ventas_nueva</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sahuayo</string>
    <string name="nav_header_subtitle">Ventas</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_precios">Precios</string>
    <string name="menu_ped_ant">Pedidos Anteriores</string>
    <string name="menu_cobranza">Cobranza</string>
    <string name="menu_cob_ant">Cobranza Anteriores</string>
    <string name="menu_indi">Indicadores</string>
    <string name="menu_publicidad">Publicidad</string>
    <string name="menu_cotizacion">Cotización</string>
    <string name="centro_mensajes">Centro de Mensajes</string>
    <string name="merca_transito">Mercancia Transito</string>
    <string name="llenado_camion">Llenado de Camión</string>
    <string name="catalogos">Catálogos</string>
    <string name="operaciones">Operaciones</string>
    <string name="ajustes">Ajustes</string>
    <string name="acerca">Acerca De</string>




    //FRAGMENT PRODUCTO
    <string name="prod">PRODUCTO</string>
    <string name="id_prod">ID</string>
    <string name="nom_prod">NOMBRE DEL PRODUCTO</string>
    <string name="precio_prod">PRECIO DEL PRODUCTO</string>
    <string name="detalle_prod">DETALLES DEL PRODUCTO</string>
    //fragment cliente
    <string name="clie">CLIENTE</string>
    <string name="nombre_cli">NOMBRE</string>
    <string name="apellido_cli">APELLIDOS</string>
    <string name="email_cli">EMAIL</string>
    <string name="numero">NÚMERO DE TELEFONO</string>

    //FRAGMENT PRECIO


    <string name="btn_guardar">REGISTRAR</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="hello_blank_fragment">FRAGMENT NUEVO SIN MODIFICAR</string>
</resources>
